kubernetes/manifest/meertime_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meertime
  labels:
    name: meertime
