kubernetes/manifest/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: meertime
  name: nginx
  labels:
    app: nginx
    tier: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: dataportal
    tier: nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: meertime
  name: ng-meertime
  labels:
    app: nginx
    tier: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dataportal
      tier: nginx
  template:
    metadata:
      labels:
        app: dataportal
        tier: nginx
    spec:
      imagePullSecrets:
        - name: meertime-regcred
      serviceAccountName: meertime
      containers:
        - name: ng-meertime
          image: nexus.gwdc.org.au/meertime-dev/meertime_nginx:0.5
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /static
              name: static-volume-django
            - mountPath: /media
              name: meertime-img-storage
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: static-volume-django
          emptyDir: {}
        - name: meertime-img-storage
          persistentVolumeClaim:
            claimName: meertime-img-pv-claim
