kubernetes/manifest/react-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: meertime-dev
  name: react
  labels:
    app: react
    tier: react
spec:
  ports:
    - port: 3000 
      protocol: TCP
      targetPort: 3000
  selector:
    app: dataportal
    tier: react
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: meertime-dev
  name: ng-react
  labels:
    app: react
    tier: react
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dataportal
      tier: react
  template:
    metadata:
      labels:
        app: dataportal
        tier: react
    spec:
      imagePullSecrets:
        - name: meertime-regcred
      serviceAccountName: meertime
      containers:
        - name: ng-react
          image: nexus.gwdc.org.au/meertime/react:dev.1.8.9
          imagePullPolicy: Always
          resources: {}
          livenessProbe:
            httpGet:
              path: /
              port: 3000 
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000 
            initialDelaySeconds: 3
            periodSeconds: 3
