kubernetes/manifest/meertime-ingress.yaml
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meertime-ingress
  labels:
    app: nginx
    app.kubernetes.io/instance: meertime
    tier: nginx
spec:
  rules:
    - host: dev.pulsars.org.au
      http:
        paths:
        - path: /
          backend:
            serviceName: react-service
            servicePort: 3000
        - path: /api
          backend:
            serviceName: django-service
            servicePort: 8000
